# ipgrep

./: .dockerignore  .gitignore  CHANGES.rst  Cargo.toml  Dockerfile  Makefile  README  README.rst  build-docker.sh
assets/: example.xcf
benches/: netlike.rs  scanner.rs
src/: cli.rs  context.rs  core.rs  files.rs  lib.rs  main.rs  matching.rs  needle.rs  net.rs  netlike.rs  output.rs  params.rs  scanner.rs
